# pyjp

./: LICENSE  README.md  pyproject.toml
src/pyjp/: __main__.py
