[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyjp"
version = "0.1.0"
description = "Run Python scripts with error messages translated into Japanese"
authors = [{ name = "Your Name" }]
dependencies = ["deepl"]

[project.scripts]
pyjp = "pyjp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]